# header-utilities

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.metaconfigure/: description.json
.travis/: build.sh
cmake/: develop_dependencies.cmake  header-utilities-config.cmake.in  release_dependencies.cmake  unit_testing.cmake
metaconfigure/: cmake.py  description.json
src/: header-utilities.hpp
src/header-utilities/: Require.hpp  copy.hpp  dereference.hpp  echoErroneousLine.hpp  element_type.hpp  exponentialSearch.hpp  is_container.hpp  is_iterator.hpp  is_range.hpp  is_shared_ptr.hpp  is_unique_ptr.hpp  iterator.hpp  iterator_category.hpp  slurpFileToMemory.hpp  value_t.hpp  void_t.hpp
src/header-utilities/Require/test/: CMakeLists.txt  Require.test.cpp
src/header-utilities/exponentialSearch/test/: CMakeLists.txt  exponentialSearch.test.cpp
src/header-utilities/is_container/test/: CMakeLists.txt  is_container.test.cpp
src/header-utilities/is_iterator/test/: CMakeLists.txt  is_iterator.test.cpp
src/header-utilities/is_range/test/: CMakeLists.txt  is_range.test.cpp
src/header-utilities/is_shared_ptr/test/: CMakeLists.txt  is_shared_ptr.test.cpp
src/header-utilities/is_unique_ptr/test/: CMakeLists.txt  is_unique_ptr.test.cpp
src/header-utilities/src/: dereference.hpp  echoErroneousLine.hpp  slurpFileToMemory.hpp
src/header-utilities/test/: CMakeLists.txt  copy.test.cpp  dereference.test.cpp  echoErroneousLine.test.cpp  element_type.test.cpp  is_container.test.cpp  is_iterator.test.cpp  is_shared_ptr.test.cpp  is_smart_ptr.test.cpp  is_unique_ptr.test.cpp  iterator.test.cpp  iterator_category.test.cpp  slurpFileToMemory.test.cpp
src/header-utilities/test/resources/: reference_file.txt
src/header-utilities/value_t/test/: CMakeLists.txt  value_t.test.cpp
